--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -7,33 +7,13 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Congratulations on making it to this point where you can now view, edit and run [Jupyter Notebooks](https://jupyter.org/).\n",
+    "Effective programming involves combining problem solving skills, domain knowledge, and then programming skills.  The goal of these notebooks is not necessarily to teach you Python, but rather how you can solve problems and perform tasks with computer programs. These notebooks will target each of these different areas.\n",
     "\n",
-    "We'll use Jupyter Notebooks for lectures, code demonstrations, and exercises.  You should run these notebooks yourself. Don't be afraid to make changes, try different code snippets than what's provided, and experiment.\n",
+    "As you learn to program, realize that learning to program is not a passive activity.  You can't simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this could, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own.  These exercises have also been written to reinforce the concepts presented.\n",
     "\n",
-    "The Jupyter environment follows a very familar [user interface](https://en.wikipedia.org/wiki/WIMP_(computing)) pattern - the main difference is the ability to execute code within the different cells.  As you scroll through this notebook, you'll see that is composed of a particular sequence of cells.  Each of those cells, can either be code or [markdown](https://en.wikipedia.org/wiki/Markdown).  You will need to execute all of the code cells - primarily in order, but you can modify and repeat running cells.  With the markdown cells, we will provide content (e.g., this cell) or provide instructions or exercises to perform. \n",
+    "In the next notebook, we'll present an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you start writing code. \n",
     "\n",
-    "A particular cell can be in one of two modes:\n",
-    "1. Command - will have a blue border around the active/current cell.\n",
-    "2. Edit - in this mode, you can change the content of the cells.  A green border is present.\n",
-    "\n",
-    "In either of these modes:\n",
-    " * <span class=\"keys\"><kbd class=\"key-shift\">Shift</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell, and select the cell below \n",
-    " * <span class=\"keys\"><kbd class=\"key-alt\">Alt</kbd><span>+</span><kbd class=\"key-enter\">Enter</kbd></span>  Run the current cell, and insert a cell below \n",
-    " * <span class=\"keys\"><kbd class=\"key-shift\">Ctrl</kbd><span>+</span><kbd class=\"key-s\">s</kbd></span> Saves the current notebook  (<span class=\"keys\"><kbd class=\"key-shift\">Command(⌘)</kbd><span>+</span><kbd class=\"key-s\">s</kbd></span> on a Mac)\n",
-    "\n",
-    "In the command mode:\n",
-    "* To see all shortcuts, type <kbd class=\"key-h\">H</kbd>\n",
-    "* Switch to the edit mode by click the mouse on the cell or typing <kbd class=\"key-enter\">Enter</kbd>\n",
-    "* Use the up and down arrow keys to move among the cells\n",
-    "* Press <kbd class=\"key-a\">a</kbd> to insert a cell above the current one\n",
-    "* Press <kbd class=\"key-b\">b</kbd> to insert a cell below the current one\n",
-    "* To change the cell type to markdown, press <kbd class=\"key-m\">m</kbd>\n",
-    "* To change the cell type to code, press <kbd class=\"key-y\">y</kbd>\n",
-    "\n",
-    "In the edit mode:\n",
-    "* Press <kbd class=\"key-esc\">Esc</kbd> to go into the command mode\n",
-    "* Press <kbd class=\"key-tab\">Tab</kbd> for code completion or indent\n"
+    "To start, this notebook contains three separate programs to demonstrate some of the potential of computer programs as well as some fundamental concepts within computer science. As this is also one of the first Python programs you might have seen, we'll provide a detailed explanation of each step.\n"
    ]
   },
   {
@@ -42,41 +22,8 @@
    "metadata": {},
    "source": [
     "## Sample Program: The Wayback Machine\n",
-    "This notebook demonstrates a couple of python scripts that can retrieve results from web services and then show you the results. As this is also one of the first Python programs you might have seen, we'll provide a detail explaination of each step.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cadd1e9-913a-4a16-ada0-bb82637deea2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install  google"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6e6c4a9",
-   "metadata": {},
-   "source": [
-    "The previous cell will install a 3rd party API that allows us to perform google search, retrieving the result in a list that can then be processed by a program.  [Package Source on Github](https://github.com/MarioVilas/googlesearch)\n",
     "\n",
-    "The previous cell's depends upon whether or not you already have the \"google\" package installed.  At the bottom of the cell, you will either see\n",
-    "```\n",
-    "Successfully installed google-3.0.0\n",
-    "```\n",
-    "or \n",
-    "```\n",
-    "Requirement already satisfied: google in ......./site-packages (3.0.0)\n",
-    "```\n",
-    "\n",
-    "The first line allows the script(program) utilize the 'sys' module, which provides access to various parameters and settings used by the python interpreter.  The corresponding Python documentation is available at <https://docs.python.org/3/library/sys.html> - do not worry if the contents of that page don't make much sense - we will explain the usages of various application program interaces (APIs) as we go through this course.\n",
-    "\n",
-    "The second line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  With that, the line then uses the \"pip\" module to install the latest version of the google API.  (\"pip\" can also be executed as a command-line program.)  Any depencences required by the google API will also be installed - this is why you may see output related to beautifulsoup4 and soupsieve.\n",
-    "\n",
-    "If you are already familar with with Python, you may be asking why not just execute `!pip install google`.  The short answer is that if the Python interpreter runs within a different `venv` than what the Jupyter server does, the dependency will be installed into the wrong location.  Jake VanderPlas describes this on [his blog in much greater detail](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/).  Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST) which you may want to examine."
+    "The following program allows the user to enter a particular website and date. The program will then query the \"Wayback Machine\" hosted at https://archive.org/ to find a copy of that website closest to the entered date and open the results in a new browser window."
    ]
   },
   {
@@ -124,7 +71,7 @@
     "* lines 1 and 2 let the program use the webbrowser and json libraries.  The webbrowser library lets us open a new browser window with a given URL (line 17).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. \n",
     "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module.\n",
     "* line 5 prints a message to the console telling the user what the program will do\n",
-    "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog that's no longer available on the internet.\n",
+    "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog that's no longer available on the Internet.\n",
     "* line 7 gets a date in a particular format starting with the year, month, and then day.  This representation is based off an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601)\n",
     "* line 8 creates a variable called `url` to point to a location on Wayback Machine at https://archive.org/\n",
     "* line 9 opens a connection to that url on archive.org and places the result into the variable `response`\n",
@@ -133,12 +80,12 @@
     "* In lines 12-18, we execute a block of code in a special region.  If any Python errors occur, the error will be caught and  the user will be shown the message from line 19.\n",
     "* line 13 grabs a specific URL from the results of the Wayback Machine.\n",
     "* line 14 prints that URL\n",
-    "* line 15 tells the user that we will be opening that URL in a new browswer window.\n",
-    "* line 16 then opens a browswer window with that URL. NOTE: this will not work in Google Colaboratory.\n",
+    "* line 15 tells the user that we will be opening that URL in a new browser window.\n",
+    "* line 16 then opens a browser window with that URL. NOTE: this will not work in Google Colaboratory.\n",
     "\n",
-    "Note: if you want to see the values of some of these intermediate values, you can edit the above source code and insert a line such as the following just after that variables is assigned:\n",
+    "Note: if you want to see the values of some of these intermediate values, you can edit the above source code and insert a line such as the following just after that variables is assigned (before line 12):\n",
     "```\n",
-    "print(content)\n",
+    "print(contents)\n",
     "```"
    ]
   },
@@ -176,9 +123,9 @@
    "id": "7fe4fc8a-b5f7-4360-a26a-c628de50c74e",
    "metadata": {},
    "source": [
-    "The previous cell allows us to use the `search()` method from the `googlesearch` module that we installed earlier in this notebook.  \n",
+    "The previous cell allows us to get help information about the `search()` method from the `googlesearch` module.\n",
     "\n",
-    "And, now, in the following cell, the program searches google for the search query \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequences of \"things/data\" in a particular order.\n",
+    "And, now, in the following cell, the program searches Google for the search query \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequences of \"things/data\" in a particular order.\n",
     "\n",
     "As we call `search`, we pass 4 arguments:\n",
     "* query terms\n",
@@ -220,7 +167,7 @@
    "id": "4cae1a28",
    "metadata": {},
    "source": [
-    "The next code blocks prints the number of entries in the list `search_result` followed by the entry in the first position.  For largely historical reasons tied to what was a performance optimization, most programming langauges start to count things at 0 and then go to length-1 for the last item. [Zero Based Numbering](https://en.wikipedia.org/wiki/Zero-based_numbering).  \n",
+    "The next code blocks prints the number of entries in the list `search_result` followed by the entry in the first position.  For largely historical reasons tied to what was a performance optimization, most programming languages start to count things at 0 and then go to length-1 for the last item. [Zero Based Numbering](https://en.wikipedia.org/wiki/Zero-based_numbering).  \n",
     "\n",
     "Try running the following block with different values for `0`.  What happens if `[0]` is removed?"
    ]
@@ -233,7 +180,7 @@
    "outputs": [],
    "source": [
     "print(len(search_results))\n",
-    "print(search_results[0])"
+    "print(search_results[3])"
    ]
   },
   {
@@ -253,14 +200,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = search_results[0]\n",
+    "url = search_results[3]\n",
     "import urllib.request\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "fp = urllib.request.urlopen(url)\n",
     "mybytes = fp.read()\n",
     "\n",
-    "mystr = mybytes.decode(\"utf8\")\n",
+    "mystr = mybytes.decode(\"utf-8\")   # convert from bytes into a string representation\n",
     "fp.close()\n",
     "\n",
     "soup = BeautifulSoup(mystr)\n",
@@ -274,6 +221,14 @@
     "text = '\\n'.join(chunk for chunk in chunks if chunk)\n",
     "\n",
     "print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259bbe35",
+   "metadata": {},
+   "source": [
+    "Yes, the output is rather messy.  Part of the challenge with scraping websites like this is to figure out what to keep and how to effectively combine the results.  Researchers then look to see how we can find meaning in that text. "
    ]
   },
   {
@@ -294,7 +249,7 @@
     "- City 3, City 1, City 2\n",
     "- City 3, City 2, City 1\n",
     "\n",
-    "But how long would that take to exhausitively search to find the optimal answer?\n",
+    "But how long would that take to exhaustively search to find the optimal answer?\n",
     "\n",
     "$n!$ possible permutations exist.\n",
     "\n",
@@ -341,14 +296,6 @@
     "The homepage for the Python documentation is at https://docs.python.org/3/   \n",
     "Visit that site and see what's available."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8ff0fb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
