--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be97dc85",
+   "id": "c60f7934",
    "metadata": {},
    "source": [
     "Step One is to manually work through one instance of the problem. Think through the the various actions that need to occur and the order of those actions.\n",
@@ -37,9 +37,19 @@
     "5. Wait for the browser to respond with the archived page\n",
     "</pre>\n",
     "\n",
+    "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer can not infer steps that our mind implicitly places into steps.  For example, in the above steps, how do I visit that particular website (open up a browser window and enter the url into the address/search bar). Many computer programming books like to use the examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed.\n",
+    "\n",
     "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to research ways to programmatically access this way. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Perform web search on \"wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that following this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
     "\n",
-    "Cool. Now, we know how to programmatically access the wayback machine, but we still don't have a general algorithm.  We have something that works for a specific problem, but we want to find something that works for all instances of this problem - which means any site and any url.  The purpose of this step is step examine why you performed your steps, what patterns may exist in the possible solution, and how various inputs can be handled.\n",
+    "In other situations, you'll need to research the problem domain to gain a deeper understand of what's occurring and how you can automate something."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c594c968",
+   "metadata": {},
+   "source": [
+    "Cool. Now, we know how to programmatically access the wayback machine, but we still don't have a general algorithm.  We have something that works for a specific problem, but we want to find something that works for all instances of this problem - which means any site and any date.  The purpose of this step is step examine why you performed your steps, what patterns may exist in the possible solution, and how various inputs can be handled.\n",
     "\n",
     "To generalize this solution, we need to pass the url and date as inputs into the process.  For right now, we can just have the user enter input these two values.  \n",
     "\n",
@@ -47,24 +57,34 @@
     "<pre>\n",
     "1. Have the user enter a website URL (website_url)\n",
     "2. Have the user enter a date in the format of YYYYMMDD (search_date)\n",
-    "3. Create a url of  https://archive.org/wayback/available?url=website_url&timestamp=searchdate\n",
+    "3. Create a url of  https://archive.org/wayback/available?url=website_url&amp;timestamp=searchdate\n",
     "4. Open a connection to that URL\n",
     "5. Read the results of the URL\n",
     "6. From the results, get the URL of the closest page.\n",
-    "7. Open a browswr with the closest URL.\n",
-    "</pre>\n",
+    "7. Open a browser with the closest URL.\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be97dc85",
+   "metadata": {},
+   "source": [
+    "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm.  This example is relatively straightforward, but in more complex situations we'll want to have at least some assurance here that our approach is sound. For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we'll look at different ways to quantify the appropriate amount of testing required. \n",
     "\n",
-    "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm.  This example is relatively straightforward, but in more complex situations we'll want to have at least some assurance here that our approach is sound.\n",
+    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used a the basis to show that equivalent problems are equivalent to it, and hence improvable.  Proving the absence of all defects is one such problem.\n",
     "\n",
     "The goal of these first four steps is to have performed sufficient planning to minimize possibly misteps as we then convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the wayback machine for a particular URL and date, and then to open a web browswer with the closest URL available in the archive.  \n",
     "\n",
     "From a documentation perspective, the expected outcome should contain:\n",
     "* Inputs to the routine\n",
     "* Outputs from the routine \n",
-    "* Pseudocode (steps in the routine).\n",
+    "* Pseudocode (steps in the routine)\n",
+    "\n",
+    "This \"outcome\" is basis of an *algorithm*, which is a well-defined procedure (series of steps) that takes some input and produces some value or set of values (output).[3]\n",
     "\n",
     "Pseudocode Guidelines: [2]\n",
-    "* Use natural language statments that precisely describe specific operations\n",
+    "* Use natural language statements that precisely describe specific operations\n",
     "* Avoid syntactic elements from the target programming language\n",
     "* Write pseudocode at the level of intent - document the approach to solve the problem\n",
     "* Write pseudocode at a low enough level that generating code from it is straightforward"
@@ -77,7 +97,7 @@
    "source": [
     "In Step 5, we convert the pseudocode into the code of our target language. \n",
     "\n",
-    "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find and correct those issues.\n",
+    "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find and correct those issues, which we'll fix be going back to Step 5.\n",
     "\n",
     "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time performing research to figure our the best approach and then creating documentation for that approach."
    ]
@@ -90,13 +110,23 @@
     "## References\n",
     "[1] Andrew D. Hilton, Genevieve M. Lipp, and Susan H. Rodger. 2019. _Translation from Problem to Code in Seven Steps_. In Proceedings of the ACM Conference on Global Computing Education (CompEd '19). Association for Computing Machinery, New York, NY, USA, 78–84. https://doi-org.prox.lib.ncsu.edu/10.1145/3300115.3309508\n",
     "\n",
-    "[2] Steve McConnell. 2004. _Code Complete_, Second Edition. Microsoft Press, USA."
+    "[2] Steve McConnell. 2004. _Code Complete_, Second Edition. Microsoft Press, USA.\n",
+    "\n",
+    "[3] Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein. 2009. _Introduction to Algorithms_, Third Edition (3rd. ed.). The MIT Press.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dc7d1d80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58bab7df",
    "metadata": {},
    "outputs": [],
    "source": []
