--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -13,7 +13,7 @@
     "![Legos](images/lego_bricks.jpg)\n",
     "<sub><sup>Source: https://commons.wikimedia.org/wiki/File:Lego_bricks.jpg</sup></sub>\n",
     "\n",
-    "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. Part of how they accomplish these builds is by having a deep understanding of how all of the different pieces can work together.\n",
+    "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. Part of how they accomplish these builds is by having a deep understanding of how all of the different pieces can work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
     "\n",
     "Similarly, to become a proficient programmer, you will need to learn a core set of concepts (building blocks). These concepts are largely universal to many different progamming languages, they just vary with slight differences in syntax.  (Syntax are the rules defining the structure of a computer language.)\n",
     "\n",
@@ -34,7 +34,7 @@
     "- behavior (methods/ functions - things an object can do)\n",
     "- an identity (something that uniquely identifies that item).\n",
     "\n",
-    "To help manage these objects, python also tracks:\n",
+    "To help manage these objects, Python also tracks:\n",
     "- an object's type - this defines what an object can do\n",
     "- a reference count that tracks how many references exist to that particular object.\n",
     "\n",
@@ -94,9 +94,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "TODO:  NEED TO BE MORE PRECISE IN OUR LANGUAGE HERE...  START DISCUSSIING REFERENCES\n",
-    "\n",
-    "Variables are a named piece of the computer's memory that can hold a particular object.  Variables are places to store information/data.\n",
+    "Variables are a named piece of the computer's memory that can hold a particular object. Technically, variables just refer to that memory location as their value.  In a more abstract sense, we can view variables in Python as places to store information/data.\n",
     "\n",
     "In this code block, we declare three variables:"
    ]
@@ -169,7 +167,7 @@
    "id": "94279dcd-3306-4516-b541-e85815ec01fa",
    "metadata": {},
    "source": [
-    "You can print out the current value of a variable with ```print()```.  Again, try printing the other variables once you execute this code block."
+    "You can print out the current value of a variable with the built-in function ```print()```.  Again, try printing the other variables once you execute this code block."
    ]
   },
   {
@@ -288,11 +286,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d4bf0d5",
+   "metadata": {},
+   "source": [
+    "## Statements\n",
+    "The assignments and function calls are examples of statements.  Think of these as being similar to complete sentences in a natural language.  They form a unit of instruction to the computer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14363b83",
    "metadata": {},
    "source": [
     "## Objects Redux\n",
-    "To circle back to the start of this notebook, we mentioned that all data in python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
+    "To circle back to the start of this notebook, we mentioned that all data in Python are managed as objects.  As such, we typically have ways to inspect the state of a particular object as well as to execute methods on those objects.\n",
     "\n",
     "While the data types shown in this notebook have relatively simple states (ie, just the value of the integer, float, or string datatype).  These values do have additional behavior defined.\n",
     "\n",
@@ -315,7 +322,7 @@
    "id": "76d6b0e3",
    "metadata": {},
    "source": [
-    "To see the available methods on an object, we use the built-in ```dir()``` method.  This can be called with a literal value, a type name, or a variable.  For example,\n",
+    "To see the available methods on an object, we use the built-in ```dir()``` function.  This can be called with a literal value, a type name, or a variable.  For example,\n",
     "```\n",
     "dir(x)\n",
     "dir(65535)\n",
@@ -339,7 +346,7 @@
    "id": "88cd4993",
    "metadata": {},
    "source": [
-    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve either special functions within python(initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.)\n",
+    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve either special functions within P Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.)\n",
     "\n",
     "To get help on a particular method, we can use the ```help()``` method.  For these, we'll need to pass either an object reference or the type name along with the method we want help for)"
    ]
@@ -401,8 +408,17 @@
     "  4. area_919\n",
     "  5. pass\n",
     "3. What function is used to display a value?\n",
-    "4. x and X are treated as the same variable identifier in Python.  (True/False)"
+    "4. x and X are treated as the same variable identifier in Python.  (True/False)\n",
+    "5. What does a variable's type tell us?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d4e337c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -421,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
