--- a/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
+++ b/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
@@ -137,7 +137,7 @@
    "id": "15de060e",
    "metadata": {},
    "source": [
-    "**Compilation Issues**\n",
+    "### Compilation Issues\n",
     "\n",
     "In the previous cell, the Python interpreter raised a \"SyntaxError\" which is a compilation issue while converting the program text into a symbolic representation that can then be executed.  Before, we have also seen runtime errors that occur as our program executes.  We can identify those in python with the presence of \"Traceback\" report in the error message that shows the list of function calls that led to the error.  We'll discuss the different error types and how to handle these errors robustly in a later module."
    ]
@@ -147,8 +147,8 @@
    "id": "76352701",
    "metadata": {},
    "source": [
-    "### Bases\n",
-    "Integers are genrally represented in programs as base 10 (decimal) numbers.  The *base* is the number of digits that a system of counting uses to represent numbers.  \n",
+    "### Integer Bases\n",
+    "Integers are generally represented in programs as base 10 (decimal) numbers.  The *base* is the number of digits that a system of counting uses to represent numbers.  \n",
     "\n",
     "Behind the scenes, computers largely rely upon sequences of bits (zeros and ones) to represent values.  As humans, we rely upon abstractions to make sense of those sequences.  There are three base representations that are often used within computer science and you may use or see these representations in your code or elsewhere.\n",
     "\n",
@@ -282,7 +282,7 @@
    "id": "d45f17bf",
    "metadata": {},
    "source": [
-    "Addition, subtraction, and multiplication are straightfoward as you expect and you can include as many numbers and operators as needed:"
+    "Addition, subtraction, and multiplication are straightforward as you expect and you can include as many numbers and operators as needed:"
    ]
   },
   {
@@ -403,11 +403,11 @@
    "source": [
     "### Precedence\n",
     "Python follows the standard rules for precedence: (PEMDAS)\n",
-    "1. Paranthesis\n",
-    "2. Exponention\n",
+    "1. Parenthesis\n",
+    "2. Exponent\n",
     "3. Multiplication or division\n",
-    "4. Addition or substraction \n",
-    "If there's any confusion, use paranthesis to make your code readable."
+    "4. Addition or subtraction \n",
+    "If there's any confusion, use parenthesis to make your code readable."
    ]
   },
   {
@@ -445,9 +445,9 @@
    "id": "a0e18ef6",
    "metadata": {},
    "source": [
-    "**Example: Temperature conversion**\n",
+    "### Example: Temperature conversion\n",
     "\n",
-    "Quite often, we'll use formula to carry out special operations such as converting fahrenheit numbers to celsius.\n",
+    "Quite often, we'll use formula to carry out special operations such as converting Fahrenheit numbers to Celsius.\n",
     "$ (F - 32) * 5/9 = C $\n",
     "\n",
     "However, in Python and other computing languages, assignments are made to a variable on the right side of equation."
@@ -643,7 +643,7 @@
    "id": "ebffa87f",
    "metadata": {},
    "source": [
-    "**Compound Interest**\n",
+    "### Compound Interest\n",
     "\n",
     "A basic financial concept is looking at the addition of interest to a principal amount after a certain period of time (e.g., one year).  $ amount = principal + (principal * rate) $"
    ]
@@ -666,14 +666,14 @@
    "id": "9218d4c0",
    "metadata": {},
    "source": [
-    "**Representation**\n",
+    "### Representation\n",
     "As with most other programming languages, Python uses IEEE Standard 754-2008 for floating point representation and arithmetic\n",
     "[IEEE](https://ieeexplore.ieee.org/document/4610935) | [Duke](https://ieeexplore-ieee-org.proxy.lib.duke.edu/document/4610935) | [NCSU](https://ieeexplore-ieee-org.prox.lib.ncsu.edu/document/4610935).\n",
     "\n",
-    "Techanically, this is derived from Python being implemented in C.  The Python tutorial discusses some of the [issues and limitations of float point arithmetic](https://docs.python.org/3/tutorial/floatingpoint.html).\n",
+    "Technically, this is derived from Python being implemented in C.  The Python tutorial discusses some of the [issues and limitations of float point arithmetic](https://docs.python.org/3/tutorial/floatingpoint.html).\n",
     "\n",
     "\n",
-    "From a financial technical persective, it's imperative that we use exact representations for our numbers. Python provides the [decimal](https://docs.python.org/3/library/decimal.html) class that we can use in our financial applications that we build. We demonstrate a basic usage of this class below and will have a separate module covering this in more detail.\n",
+    "From a financial technical perspective, it's imperative that we use exact representations for our numbers. Python provides the [decimal](https://docs.python.org/3/library/decimal.html) class that we can use in our financial applications that we build. We demonstrate a basic usage of this class below and will have a separate module covering this in more detail.\n",
     "\n",
     "Examples of incomplete representation:"
    ]
@@ -715,7 +715,7 @@
    "metadata": {},
    "source": [
     "## Type Conversions\n",
-    "Python provides several built-in methods to convert values among integer, float, and strings datatypes.  \n",
+    "Python provides several built-in methods to convert values among integer, float, and string datatypes.  \n",
     "\n",
     "```int()```  converts a string or a float to an integral value. The string must be a valid string otherwise a ValueError occurs.  With floats, the decimal portion is truncated (not rounded)."
    ]
@@ -800,9 +800,9 @@
    "id": "635d6fb4",
    "metadata": {},
    "source": [
-    "**Minimum and maxium values**\n",
+    "## Minimum and Maximum values\n",
     "\n",
-    "Theoritically, there is no longer any minimum or maximum values for integers within Python 3.  Python 2, which has been sunset, used 32-bit or 64-bit representations for integers and did have limits.  Practically, there is a limit as to how large the interpreter can handle based upon the CPU speed and memory for the computer running the Python interpreter."
+    "Theoretically, there is no longer any minimum or maximum values for integers within Python 3.  Python 2, which has been sunset, used 32-bit or 64-bit representations for integers and did have limits.  Practically, there is a limit as to how large the interpreter can handle based upon the CPU speed and memory for the computer running the Python interpreter."
    ]
   },
   {
@@ -849,6 +849,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "546bdc53",
+   "metadata": {},
+   "source": [
+    "## Shorthand Assignments\n",
+    "As with many other programming languages, Python provides shorthand assignments for operations:\n",
+    "\n",
+    "Operation | Shorthand | Meaning \n",
+    ":-------- | :-------- | :-------- \n",
+    "Addition|  x += 2 | x = x +2\n",
+    "Subtraction| x -= y | x = x - y\n",
+    "Multiplication| x *=3 | x = x * 3 \n",
+    "True division|  x /=2 | x = x / 2\n",
+    "Floor division| x //= y | x = x // y\n",
+    "Remainder (modulo)| x %= 2 | x %= 2\n",
+    "Exponentiation| x **= 5 |  x = x**5 \n",
+    "\n",
+    "Python does not support the unary increment / decrement operators such as `x++` or `x--`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8c9fe25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = 10\n",
+    "y **= 2\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24c6ca57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y %= 75\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c4fe616",
    "metadata": {},
    "source": [
@@ -871,8 +915,8 @@
     "   3. 5.123e-10\n",
     "4. What is the type of this expression?   5 + 2 + 34 + 4/2\n",
     "5. What is the type of this expression?  5+ 8//2\n",
-    "6. Write python code to convert the 100 degrees celsuis to fahrenheit.\n",
-    "7. Lookup the formula for [periodic compounding](https://en.wikipedia.org/wiki/Compound_interest#Periodic_compounding). Write a snippet of python code that you can use the set the variables to apply the compounding formula.  This should be similar to the fahrenheit conversion above, but you just have a few more variables.  You should have the following variables with P, r, n, and t where \n",
+    "6. Write python code to convert the 100 degrees Celsuis to Fahrenheit.\n",
+    "7. Lookup the formula for [periodic compounding](https://en.wikipedia.org/wiki/Compound_interest#Periodic_compounding). Write a snippet of python code that you can use the set the variables to apply the compounding formula.  This should be similar to the Fahrenheit conversion above, but you just have a few more variables.  You should have the following variables with P, r, n, and t where \n",
     "    - A is the final amount\n",
     "    - P is the original principal sum\n",
     "    - r is the nominal annual interest rate\n",
@@ -882,6 +926,14 @@
     "9. How would you find the additional information for decimal class(type) within Python?  \n",
     "10. How would you find the additional information for decimal class(type) on the web?  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e687af3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -900,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
