--- a/IntroductionToPython/04-BasicInputAndOutput.ipynb
+++ b/IntroductionToPython/04-BasicInputAndOutput.ipynb
@@ -235,20 +235,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1cec3a",
+   "id": "12f63fc3",
    "metadata": {},
    "source": [
     "## Case Study: Systematic Investment Plan Calculator\n",
     "\n",
-    "In the second notebook, we presented a design process with the goal to produce the parts:\n",
+    "In the second notebook, we presented a design process with the goal to produce these parts of a design:\n",
     "* Inputs to the routine\n",
     "* Outputs from the routine\n",
     "* Pseudocode (steps in the routine).\n",
     "\n",
     "The design process followed Seven Steps:[1]\n",
-    "![](images/sevensteps.png)\n",
-    "\n",
-    "\n",
+    "![](images/sevensteps.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17ce0d7b",
+   "metadata": {},
+   "source": [
     "Now let's take a look at that process for creating a systematic investment plan (SIP) calculator. A SIP is an investment product offered by many mutual fund companies. Investors put a fixed amount of money into the SIP periodically (e.g., monthly) to help promote financial discipline as well as a form of dollar cost averaging.\n",
     "\n",
     "\n",
@@ -276,8 +281,14 @@
     "Step 3: Generalize our steps\n",
     "We're pretty much done already here, just list the inputs and outputs - the steps are pretty much the same.\n",
     "- Inputs: payment amount, number of payments, and annual interest rate.  \n",
-    "- Outputs future value.\n",
-    "\n",
+    "- Outputs future value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b1cec3a",
+   "metadata": {},
+   "source": [
     "Step 4: Manually test our generic process.  \n",
     "\n",
     "As you start this step, look to develop a set of cases that will thoroughly test your process. Start with the expected inputs.  For this problem, payments could be a reasonable amount to save every month. Yes, this depends on your income.  Let's choose $100.  For the number of payments, assume we are saving for retirement.  This is going to vary by age, let's use 30 years. Investing sales pitches like to use these longer time frames as they demonstrate the time value of money and the power of compound interest.  For the interest rate, we chose 7% as it's the historical average of the DJIA.  Compute the amount.\n",
@@ -635,7 +646,7 @@
    "id": "61674eea",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "[1] Andrew D. Hilton, Genevieve M. Lipp, and Susan H. Rodger. 2019. _Translation from Problem to Code in Seven Steps_. In Proceedings of the ACM Conference on Global Computing Education (CompEd '19). Association for Computing Machinery, New York, NY, USA, 78–84. https://doi-org.prox.lib.ncsu.edu/10.1145/3300115.3309508"
    ]
   },
