--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -8,7 +8,11 @@
     "# Functions\n",
     "Most of the Python code that you have seen and written in these notebooks have been small fragments.  In some cases, these fragments can produce interesting and useful results such as computing compound interest.  However, it does not make any sense to constantly copy and paste these fragments into other programs.  Fortunately, Python provides a mechanism to organize these code blocks into a cohesive unit - the function.  We've already seen and used many of the built-in Python functions (`int`, `float`, `print`, `input`, `type`, `help`, `dir`), now we'll develop our own in this notebook.\n",
     "\n",
-    "Functions are a named, resusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.\n"
+    "Functions are a named, resusable block of code.  They can take any number of parameters to send data into the function.  Functions can then return any number of results back to the calling block.\n",
+    "\n",
+    "As you use functions within your prograam, two fundamental concepts exist:\n",
+    "1. Defining (declaring) the function.  This provides the function's definition: the name, parameters, and functionality.  In many other programming languages, you'll need to explicitly state the function's return type.\n",
+    "2. Calling the function.  As we call (execute) a function, we pass a specific list of arguments to be used as the values for a function's parameters.\n"
    ]
   },
   {
@@ -304,7 +308,7 @@
    "id": "28c176a7",
    "metadata": {},
    "source": [
-    "## Docstrings and provide function documentation\n",
+    "## Docstrings and Providing Function Documentation\n",
     "We can provide documentation for a function by using a docstring at the start of a function.  Remember that docstrings are strings contained within triple double quotes.\n",
     "\n",
     "With these docstrings, other programmers can see information on your function and more effectively use it."
@@ -456,7 +460,7 @@
    "source": [
     "Besides `b` not being defined in the above example.  Another thing to note is the value of `a` on line 3. Within _f_, we effectively declared a new variable for `a` that just exists for _f_.  In _g_, we are able to reference a global variable, but not change its value.\n",
     "\n",
-    "In this next example, we use the `global` keyword such that we can explicitly access and use a global variable."
+    "In this next example, we use the `global` keyword such that we can explicitly access and use a global variable within a function."
    ]
   },
   {
@@ -597,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
