--- a/IntroductionToPython/15-Files.ipynb
+++ b/IntroductionToPython/15-Files.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Files\n",
     "\n",
-    "Files are one of the most ubiquitous abstractions for computers.  As users, we constantly interact with files to store our documents and other data.  We organize these files into directories (folders).  Directories can contain subdirectories to provde a hierarchical structure of various contents.  \n",
+    "Files are one of the most ubiquitous abstractions for computers.  As users, we constantly interact with files to store our documents and other data.  We organize these files into directories (folders).  Directories can contain subdirectories to provide a hierarchical structure of various contents.  \n",
     "\n",
     "As with other programming languages, Python provides a rich set of functionality to interact with files and directories. Interacting with files will also be necessary to allow us to persist data. So far, we have just used variables that hold data in the computer's memory - such data will be lost when the program terminates.  By storing data in files, the information is placed (stored/persisted) on [secondary storage devices](https://en.wikipedia.org/wiki/Computer_data_storage#Secondary_storage) such as hard drives and USB sticks. \n",
     "\n",
@@ -193,7 +193,7 @@
    "id": "f49bf77b",
    "metadata": {},
    "source": [
-    "Notice that in the above output, the newlines stored in the file are kept in the returned string.  If they were simply stripped from the return value, it would not be possible to distinquish between an empty line and the end of the file."
+    "Notice that in the above output, the newlines stored in the file are kept in the returned string.  If they were simply stripped from the return value, it would not be possible to distinguish between an empty line and the end of the file."
    ]
   },
   {
@@ -461,9 +461,9 @@
    "id": "649eefe7",
    "metadata": {},
    "source": [
-    "Initially, that result looks very esotoric, but once we break down a few of the fields, it makes more sense.\n",
+    "Initially, that result looks very esoteric, but once we break down a few of the fields, it makes more sense.\n",
     "\n",
-    "The `st_mode` contains the file type and permissions associated with the file.  Using `ls -l` we see this data represented with a string that looks like '-rwxr-xr-x'.  This first character specifcs the type - we'll see '-' for files and 'd' for directories.  The next 9 characters represent the permissions for the user, group, and world in terms of read, write, and execute.  Typically, st_mode makes more sense in it's octal representaion."
+    "The `st_mode` contains the file type and permissions associated with the file.  Using `ls -l` we see this data represented with a string that looks like '-rwxr-xr-x'.  This first character specifies the type: '-' for files and 'd' for directories.  The next 9 characters represent the permissions for the user, group, and world in terms of read, write, and execute.  Typically, st_mode makes more sense in it's octal representation."
    ]
   },
   {
@@ -485,7 +485,7 @@
     "\n",
     "st_size is the number of bytes to contain the file's contents.\n",
     "\n",
-    "st_atime, st_mtime, st_ctime represent when the file was last accss, modified, and created.  These are specified in seconds. To convert to a date and time, they present the number of seconds since unix epoch which is midnight on January 1st, 1970.  While this fact seems really esotoric, this is a very common base representation for dates and times.  Fortunately, as with other languages, Python provides APIs to perform the necessary conversion into a datetime object."
+    "st_atime, st_mtime, st_ctime represent when the file was last accessed, modified, and created.  These are specified in seconds. To convert to a date and time, they present the number of seconds since Unix epoch which is midnight on January 1st, 1970.  While this fact seems really esoteric, this is a very common base representation for dates and times.  Fortunately, as with other languages, Python provides APIs to perform the necessary conversion into a datetime object."
    ]
   },
   {
@@ -702,7 +702,7 @@
    "metadata": {},
    "source": [
     "## Pathnames\n",
-    "Most computers use a hierarchical filesytems. As such,  we have a current working directory based upon where our shell session is currently at.  Other times, that working directory is based upon setting when an executable is started.  At the command-line, you can print the working directory with `pwd`.  With Python, we get the current working directory with "
+    "Most computers use a hierarchical file system. As such,  we have a current working directory based upon where our shell session is currently at.  Other times, that working directory is based upon setting when an executable is started.  At the command-line, you can print the working directory with `pwd`.  With Python, we get the current working directory with "
    ]
   },
   {
@@ -738,9 +738,9 @@
    "id": "c22a83c6",
    "metadata": {},
    "source": [
-    "Throughout this notebook (and in most of file/directory operation commands), we passed a directory name or file name as arguments into the various function calls. As we specify those names, we can  either specify *absolute* or *relative* pathnames.  *Absolute* pathnames start from the root (top) directory - these pathnames will start with a `/`. *Relative* pathnames start from the current directory.  As we should in a code block above `.` refers to the current directoy and `..` refers to its parents.  \n",
+    "Throughout this notebook (and in most of file/directory operation commands), we passed a directory name or file name as arguments into the various function calls. As we specify those names, we can  either specify *absolute* or *relative* pathnames.  *Absolute* pathnames start from the root (top) directory - these pathnames will start with a `/`. *Relative* pathnames start from the current directory.  As we should in a code block above `.` refers to the current directory and `..` refers to its parents.  \n",
     "\n",
-    "To separate directories, most systems use a forward slash `/`. The exception is Windows, which uses a backward slash `\\`.  The reasoning dates back to the early days of MS-DOS in the 1980s.  The '/' was used to specify command line arguments whereas Unix typically uses a dash '-'.  Windows is slowly coming around.  Within Powershell, you can specify names with a `/`, it will just convert it to `\\`.  "
+    "To separate directories, most systems use a forward slash `/`. The exception is Windows, which uses a backward slash `\\`.  The reasoning dates back to the early days of MS-DOS in the 1980s.  The '/' was used to specify command line arguments whereas Unix typically uses a dash '-'.  Windows is slowly coming around.  Within PowerShell, you can specify names with a `/`, it will just convert it to `\\`.  "
    ]
   },
   {
@@ -787,7 +787,7 @@
    "metadata": {},
    "source": [
     "## Pathlib\n",
-    "In Python 3.4, the language developers added the `pathlib` module.  This provides an alternative to the `os` module that we have been using in this notebook.\n",
+    "In Python 3.4, the language developers added the `pathlib` module.  This provides an alternative to the `os` module presented in this notebook.\n",
     "\n",
     "The primary change has been in the introduction of a `Path` class to treat files and directories as an object with methods that we call from that object rather than using strings and calling functions under `os`.  \n",
     "\n",
@@ -804,14 +804,14 @@
     "### Newline Characters\n",
     "One of the common issues when dealing with text files is that different platforms use different characters to signify a new line.  One Linux and MacOS, newlines are represented with just the bytecode `0x0a <LF> \\n` while on Windows, `0x0d0a <CR><LF> \\r\\n` represents a new line. \n",
     "\n",
-    "Within Python 3, the `open()` function has a parameter `newline` which controls how newlines are processed when reading in text files.  By defualt, universal newlines are enabled.  In this mode, lines can end with `\\n`, `\\r`, or `\\r\\n`.  Python will translate all of these to `\\n` before returning a value to caller.   \n",
+    "Within Python 3, the `open()` function has a parameter `newline` which controls how newlines are processed when reading in text files.  By default, universal newlines are enabled.  In this mode, lines can end with `\\n`, `\\r`, or `\\r\\n`.  Python will translate all of these to `\\n` before returning a value to caller.   \n",
     "\n",
     "When writing output to a file, any `\\n` characters are translated to tthe system default line separator, `os.linesep`, as the output is sent to a file.\n",
     "\n",
     "For both reading and writing, there are additional modes to force behavior if required.\n",
     "\n",
     "### Encodings\n",
-    "Often times, text files can be created with different encodings to represent how text is stored for special characters (i.e., any characters that aren't ASCII).  By default, Python uses UTF-8 to encode files.   However, you may run across files stored in a different encoding (yes, Windows strikes again ...).  You'll need to figure out what the encoding and then open the file with by specificying the encoding argument to `open()` with the right value"
+    "Often times, text files can be created with different encodings to represent how text is stored for special characters (i.e., any characters that aren't ASCII).  By default, Python uses UTF-8 to encode files.   However, you may run across files stored in a different encoding (yes, Windows strikes again ...).  You'll need to figure out what the encoding and then open the file with by specifying the encoding argument to `open()` with the right value"
    ]
   },
   {
@@ -885,7 +885,7 @@
    "metadata": {},
    "source": [
     "## File Case Study: DJIA Returns and Statistics\n",
-    "The following code reads a file containing the returns for the Dow Jones Industrial Average (DJIA) from 1886 to mid-2022.  The data in the file is stored in a [comma-separated values](https://en.wikipedia.org/wiki/Comma-separated_values) (csv) format. In this format, data is separated by commas and records by newlines. Optionally, a header row may be present with the field names.\n",
+    "The following code reads a file containing the returns for the Dow Jones Industrial Average (DJIA) from 1886 to mid-2022.  The data in the file is stored in a [comma-separated values](https://en.wikipedia.org/wiki/Comma-separated_values) (CSV) format. In this format, data is separated by commas and records by newlines. Optionally, a header row may be present with the field names.\n",
     "<pre>\n",
     "Year,Return\n",
     "2022,-8.6\n",
@@ -997,22 +997,7 @@
    "metadata": {},
    "source": [
     "### Distribution\n",
-    "Here we'll bring in a visualization library to see the distribution of returns using a histogram. \n",
-    "\n",
-    "The following cell will install [seaborn](https://seaborn.pydata.org/) it's not already present on your system."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c387b9a1",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install  seaborn"
+    "Here we'll bring in a visualization library, [seaborn](https://seaborn.pydata.org/), to see the distribution of returns using a histogram. "
    ]
   },
   {
@@ -1042,7 +1027,7 @@
    "metadata": {},
    "source": [
     "### Demonstration of the Central Limit Theorem for $\\bar{y}$\n",
-    "The Central Limit Theorem(CLT) is one of the fundamental concepts.  CLT can be stated as \n",
+    "The Central Limit Theorem(CLT) is one of the fundamental concepts in statistics.  CLT can be stated as \n",
     "\n",
     "\n",
     "Let $\\bar{y}$ denote the sample mean computed from a random sample of $n$ measurements from a population having a mean, $\\mu$, and standard deviation, $\\sigma$. \n",
@@ -1098,7 +1083,7 @@
    "metadata": {},
    "source": [
     "### Distribution of Gaussian Random Values\n",
-    "This final code block pulls 5,000 random values from a gaussian distribution where the mean and standard deviation are defined from the DJIA return values. [Documentation for random.gauss()](https://docs.python.org/3/library/random.html#random.gauss)"
+    "This final code block pulls 5,000 random values from a Gaussian distribution where the mean and standard deviation are defined from the DJIA return values. [Documentation for random.gauss()](https://docs.python.org/3/library/random.html#random.gauss)"
    ]
   },
   {
@@ -1128,7 +1113,7 @@
     "</pre>\n",
     "where XXX is the total of all of the file sizes (excluding subdirectories).  The listing should be in sorted order of the files.\n",
     "\n",
-    "2. Write a method with two parameters: filename and countdown.  Countdown is a positve integer.  Using a range function, write a file that looks like 10 9 8 7 6 5 4 3 2 1---BlastOff\n",
+    "2. Write a method with two parameters: filename and countdown.  Countdown is a positive integer.  Using a range function, write a file that looks like 10 9 8 7 6 5 4 3 2 1---BlastOff\n",
     "\n",
     "3. Write a method with one parameter - filename. The function reads a file produced by the function in the previous exercise.  it will read all of the numbers and produce their sum, printing the result to the console."
    ]
@@ -1158,7 +1143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
